# Ising

./: CMakeLists.txt  MC.cpp  MC_Graph.cpp  PhaseTran.cpp  README.md  Wolff.cpp  Wolff_Graph.cpp
DataProcessing/: sv.py
